@@ -30,6 +30,10 @@ Added alpha blending and fade-in/out to stones (19/8/2013):
     This is necessary to support the two finger pinch to
     pickup when multiple stones are on the board
 
+    Both touches must be released on same stone id to pick up
+
+    While fading out stone should have linear/ang velocity zeroed.
+
 
 Added stone pickup gesture (18/8/2013):
 ---------------------------------------
